--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -7,7 +7,7 @@
 .container.regular-padding {
     width: 1080px;
     margin: 0 auto;
-    @media screen and (max-width: 1080px) {
+    @media screen and (max-width: 1070px) {
         width: 960px;
     }
     @media screen and (max-width: 960px) {
@@ -22,6 +22,10 @@
     display: flex;
     flex-direction: column;
     height: 100vh;
+    @media screen and (max-width: 1070px) {
+        height: unset;
+        padding-bottom: 48px
+    }
     main {
         flex-grow: 1;
     }
