--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -22,8 +22,10 @@
     display: flex;
     flex-direction: column;
     height: 100vh;
+    background: black;
     @media screen and (max-width: 1070px) {
         height: unset;
+        min-height: 100vh;
         padding-bottom: 48px
     }
     main {
