--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -22,11 +22,11 @@
     display: flex;
     flex-direction: column;
     height: 100vh;
-    background: black;
     @media screen and (max-width: 1070px) {
         height: unset;
         min-height: 100vh;
-        padding-bottom: 48px
+        padding-bottom: 48px;
+        background: black;
     }
     main {
         flex-grow: 1;
